# roms-tools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  PR_DESCRIPTION.md  README.md  conftest.py  coverage.toml  paper.md  pyproject.toml  test_close_narrow_channels_notebook.py  test_close_narrow_channels_viz.py
.github/: PULL_RELEASE_TEMPLATE.md  pull_request_template.md
.github/workflows/: close_jira_ticket.yaml  create_jira_tickets.sh  draft-pdf.yaml  open_jira_ticket.yaml  pre-commit.yaml  pypipublish.yaml  sphinx.yaml  tests.yaml
ci/: environment-with-xesmf.yml  environment.yml
ci/scripts/: convert_notebooks.sh
docs/: Untitled.ipynb  api.rst  atmospheric_forcing.ipynb  boundary_forcing.ipynb  cdr_analysis.ipynb  cdr_forcing.ipynb  conf.py  contributing.rst  dask.ipynb  datasets.ipynb  datasets.md  datasets_overview.rst  datasets_read.ipynb  end_to_end.ipynb  environment.yml  examples.rst  features.rst  grid.ipynb  index.rst  initial_conditions.ipynb  installation.rst  join.ipynb  join.py  methods.md  methods.rst  nesting.ipynb  partition.ipynb  plotting_roms_output.ipynb  reading_roms_output.ipynb  references.bib  references.rst  regridding_roms_output.ipynb  releases.md  river_forcing.ipynb  roms_output.ipynb  support.rst  surface_forcing.ipynb  tides.ipynb  using_dask.ipynb  vertical_coordinate.ipynb
docs/_templates/autosummary/: class.rst
docs/forcings/: bdry_forcing.nc
docs/grids/: grid_with_smoother_topography.nc  my_new_roms_grid.nc
notebooks/: grid.ipynb
paper/: paper.md  ref.bib
roms_tools/: __init__.py  _version.py  constants.py  download.py  fill.py  grid.py  plot.py  processing_methods.py  proj_config.py  regrid.py  roms_dataset.py  romstools_ben.py  utils.py  vertical_coordinate.py
roms_tools/analysis/: cdr_analysis.py  cdr_ensemble.py  roms_output.py  utils.py
roms_tools/data/grids/: GLORYS_global_grid.nc
roms_tools/datasets/: download.py  lat_lon_datasets.py  river_datasets.py  roms_dataset.py  utils.py
roms_tools/datasets/data/: river_tracer_defaults.csv  river_tracer_defaults.nc
roms_tools/setup/: atmospheric_forcing.py  bgc_model.py  bgc_source.py  boundary_forcing.py  cdr_ensemble.py  cdr_forcing.py  cdr_release.py  datasets.py  download.py  fill.py  grid.py  initial_conditions.py  lat_lon_datasets.py  mask.py  mixins.py  nest_boundaries.py  nesting.py  nesting_SE.py  plot.py  regrid.py  river_datasets.py  river_forcing.py  rivr2o_diagnostics.py  roms_mixin.py  surface_forcing.py  tides.py  topography.py  utils.py  vertical_coordinate.py
roms_tools/tests/: glofas_test_utils.py  pytest.ini  rivr2o_test_utils.py  test_atmospheric_forcing.py  test_boundary_forcing.py  test_datasets.py  test_fill.py  test_grid.py  test_initial_conditions.py  test_processing_methods.py  test_regrid.py  test_roms_dataset.py  test_setup.py  test_surface_forcing.py  test_tides.py  test_topography.py  test_utils.py  test_validation.py  test_vertical_coordinate.py
roms_tools/tests/test_analysis/: test_cdr_analysis.py  test_cdr_ensemble.py  test_roms_output.py
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/ALK_south/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/ALK_west/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/DIC_east/: .zattrs
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/DIC_west/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/DOC_south/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/DOCr_south/: .zattrs
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/DON_south/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/DONr_north/: .zattrs
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/DOP_north/: .zattrs
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/Fe_east/: .zattrs
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/Fe_west/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/NH4_east/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/NO3_west/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/PO4_south/: .zattrs
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/SiO3_north/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/diatSi_west/: .zattrs
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/diazC_east/: .zattrs
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/diazC_south/: 0.0.0
roms_tools/tests/test_data/bgc_boundary_forcing_from_clim.zarr/diazChl_east/: 0.0.0
roms_tools/tests/test_data/bgc_surface_forcing_from_clim.zarr/: .zattrs
roms_tools/tests/test_data/boundary.zarr/salt_east/: 0.0.0
roms_tools/tests/test_data/boundary_forcing.zarr/: .zmetadata
roms_tools/tests/test_data/initial_conditions.zarr/: .zattrs
roms_tools/tests/test_data/surface_forcing.zarr/: .zmetadata
roms_tools/tests/test_datasets/: test_lat_lon_datasets.py  test_river_datasets.py  test_roms_dataset.py  test_utils.py
roms_tools/tests/test_setup/: .test_river_forcing.py.swp  conftest.py  test_bgc_model.py  test_boundary_forcing.py  test_cdr_forcing.py  test_cdr_release.py  test_datasets.py  test_fill.py  test_grid.py  test_initial_conditions.py  test_lat_lon_datasets.py  test_nesting.py  test_prefill.py  test_regrid.py  test_river_datasets.py  test_river_forcing.py  test_surface_forcing.py  test_tides.py  test_topography.py  test_tracer_defaults.py  test_utils.py  test_validation.py  test_vertical_coordinate.py  utils.py
roms_tools/tests/test_tiling/: test_join.py  test_partition.py
roms_tools/tiling/: join.py  partition.py
(+4444 files in other folders)
