[project]
name = "roms-tools"
description = "Tools for running and analysing UCLA-ROMS simulations"
readme = "README.md"
authors = [
    {name = "Nora Loose", email = "nora.loose@gmail.com"},
    {name = "Thomas Nicholas", email = "tom@cworthy.org"}
]
license = {text = "Apache-2"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "xarray >=2022.6.0",
    "numpy",
    "pooch",
    "matplotlib",
    "cartopy",
    "packaging",
    "scipy",
    "gcm_filters",
    "netcdf4",
    "PyYAML",
    "pyamg",
    "bottleneck",
    "regionmask",
    "xgcm",
    "numba",
    "pydantic",
    "gcsfs"
]
dynamic = ["version"]


[project.optional-dependencies]
dask = [
    "dask[diagnostics]",
]
stream = [
    "dask[diagnostics]",
    "gcsfs"
]


[project.urls]
Home = "https://github.com/CWorthy-ocean/roms-tools"
Documentation = "https://roms-tools.readthedocs.io/en/latest/"

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "setuptools_scm[toml]>=8.0",
    "check-manifest"
]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.setuptools.packages.find]
exclude = ["docs", "tests", "tests.*", "docs.*"]

[tool.setuptools.package-data]
roms_tools = ["py.typed"]

[tool.ruff.lint]
extend-select = ["I"]

[mypy]
files = "roms_tools/**/*.py"
show_error_codes = true
