[project]
name = "roms-tools"
description = "Tools for running and analysing UCLA-ROMS simulations"
readme = "README.md"
authors = [
    {name = "Nora Loose", email = "nora.loose@gmail.com"},
    {name = "Thomas Nicholas", email = "tom@cworthy.org"},
    {name = "Scott Eilerman", email = "scott.eilerman@cworthy.org"}
]
license = {text = "Apache-2"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "xarray>=2022.6.0,<2025.8.0",
    "numpy>2.0,<2.3",
    "pooch",
    "matplotlib",
    "cartopy",
    "packaging",
    "scipy",
    "gcm_filters >=0.5.1",
    "netcdf4",
    "PyYAML",
    "pyamg",
    "bottleneck",
    "regionmask",
    "xgcm",
    "numba>=0.61.2",
    "pydantic>2,<3",
]
dynamic = ["version"]


[project.optional-dependencies]
dask = [
    "dask[diagnostics]",
    "zarr"
]
stream = [
    "dask[diagnostics]",
    "gcsfs",
    "zarr",
    "copernicusmarine",
]


[project.urls]
Home = "https://github.com/CWorthy-ocean/roms-tools"
Documentation = "https://roms-tools.readthedocs.io/en/latest/"

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "setuptools_scm[toml]>=8.0",
    "check-manifest"
]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.setuptools.packages.find]
exclude = ["docs", "tests", "tests.*", "docs.*"]

[tool.setuptools.package-data]
roms_tools = ["py.typed"]

[tool.ruff]
fix = true
show-fixes = true
line-length = 88
exclude = ["docs"]

[tool.ruff.lint]
extend-select = ["I", "E", "W", "F" , "D", "RUF", "UP"]
ignore = ["E501", "D205", "D102", "D100", "D401", "D101", "D105", "D103", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[mypy]
files = "roms_tools/**/*.py"
show_error_codes = true
